[BUGFIX] Enable to focus point behind bullseye by click

--- a/demos/helper/helper-tool.css
+++ b/demos/helper/helper-tool.css
@@ -61,4 +61,5 @@
   transition: all 500ms ease-in-out;
   -webkit-transition: all 500ms ease-in-out;
   -moz-transition: all 500ms ease-in-out;
+  pointer-events: none;
 }
